try and fix wrapping of post titles better

--- a/src/assets/css/hexbear-global.css
+++ b/src/assets/css/hexbear-global.css
@@ -9,7 +9,7 @@
 }
 
 .hexbear-thumbnail-wrapper {
-  max-width: 115px !important;
+  max-width: 108px !important;
 }
 
 .hexbear-thumbnail-wrapper a {
